--- a/Date-1.ipynb
+++ b/Date-1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
        "4  10/17/1913        30.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +156,7 @@
        "Name: Date, Length: 5268, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +196,7 @@
        "Name: Date, Length: 5268, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +250,7 @@
        "0  09/17/1908         1.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -281,7 +288,7 @@
        "Name: Date, Length: 5268, dtype: datetime64[ns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +373,7 @@
        "4 1913-10-17        30.0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +490,7 @@
        "4 1913-10-17        30.0        4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,6 +499,512 @@
     "#passando a funcao quarter para determinar em qual trimestre a data se encontra.\n",
     "df1[\"Quarter\"]=df1[\"Date\"].dt.quarter\n",
     "df1.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transformando a coluna data para index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('<M8[ns]')"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_index=df1.set_index(\"Date\")\n",
+    "\n",
+    "df1_index.index.dtype\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1_index.drop(columns=\"Quarter\", inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Somando fatalidades no mes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fatalities</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1908-09-01</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-10-01</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-11-01</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-12-01</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1909-01-01</th>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-02-01</th>\n",
+       "      <td>102.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-03-01</th>\n",
+       "      <td>44.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-04-01</th>\n",
+       "      <td>65.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-01</th>\n",
+       "      <td>120.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-01</th>\n",
+       "      <td>242.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1210 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fatalities\n",
+       "Date                  \n",
+       "1908-09-01         1.0\n",
+       "1908-10-01         0.0\n",
+       "1908-11-01         0.0\n",
+       "1908-12-01         0.0\n",
+       "1909-01-01         0.0\n",
+       "...                ...\n",
+       "2009-02-01       102.0\n",
+       "2009-03-01        44.0\n",
+       "2009-04-01        65.0\n",
+       "2009-05-01       120.0\n",
+       "2009-06-01       242.0\n",
+       "\n",
+       "[1210 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_index.resample(\"MS\").sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agrupando por  media por semana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fatalities</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1908-09-20</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-09-27</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-10-04</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-10-11</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1908-10-18</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-17</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-24</th>\n",
+       "      <td>98.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-31</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-07</th>\n",
+       "      <td>114.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-14</th>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5257 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fatalities\n",
+       "Date                  \n",
+       "1908-09-20         1.0\n",
+       "1908-09-27         NaN\n",
+       "1908-10-04         NaN\n",
+       "1908-10-11         NaN\n",
+       "1908-10-18         NaN\n",
+       "...                ...\n",
+       "2009-05-17         NaN\n",
+       "2009-05-24        98.0\n",
+       "2009-05-31         4.0\n",
+       "2009-06-07       114.5\n",
+       "2009-06-14        13.0\n",
+       "\n",
+       "[5257 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_index.resample(\"W\").mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Usando rolling para \"rolar\" meses a frente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fatalities</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1908-09-17</th>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1912-07-12</th>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1913-08-06</th>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1913-09-09</th>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1913-10-17</th>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-20</th>\n",
+       "      <td>58.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-26</th>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-01</th>\n",
+       "      <td>116.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-07</th>\n",
+       "      <td>114.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-08</th>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5268 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fatalities\n",
+       "Date                  \n",
+       "1908-09-17         NaN\n",
+       "1912-07-12         3.0\n",
+       "1913-08-06         3.0\n",
+       "1913-09-09         7.5\n",
+       "1913-10-17        22.0\n",
+       "...                ...\n",
+       "2009-05-20        58.0\n",
+       "2009-05-26        51.0\n",
+       "2009-06-01       116.0\n",
+       "2009-06-07       114.5\n",
+       "2009-06-08         7.0\n",
+       "\n",
+       "[5268 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_index.rolling(2).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ou podemos utilizar o expanding para calcularmos o acumulado "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fatalities</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1908-09-17</th>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1912-07-12</th>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1913-08-06</th>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1913-09-09</th>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1913-10-17</th>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-20</th>\n",
+       "      <td>105233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-05-26</th>\n",
+       "      <td>105237.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-01</th>\n",
+       "      <td>105465.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-07</th>\n",
+       "      <td>105466.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-08</th>\n",
+       "      <td>105479.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5268 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Fatalities\n",
+       "Date                  \n",
+       "1908-09-17         1.0\n",
+       "1912-07-12         6.0\n",
+       "1913-08-06         7.0\n",
+       "1913-09-09        21.0\n",
+       "1913-10-17        51.0\n",
+       "...                ...\n",
+       "2009-05-20    105233.0\n",
+       "2009-05-26    105237.0\n",
+       "2009-06-01    105465.0\n",
+       "2009-06-07    105466.0\n",
+       "2009-06-08    105479.0\n",
+       "\n",
+       "[5268 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1_index.expanding().sum()"
    ]
   }
  ],
